@@ -1,3 +1,12 @@
+2012-08-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
+	* interp/i-coerfn.boot: Do not import i-coerce.  Import i-analy
+	and i-resolv intead.
+	($CoerceTable): Fix embarrassing thinko.
+	* interp/i-coerce.boot: Import i-coerfn.
+	(coerceIntTableOrFunction): Tidy.
+	* boot/utility.boot (objectAssoc): Tidy.
+
 2012-08-19  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* interp/util.lisp (BUILD-INTERPSYS): loadDelayedFFI early.
